--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/travel-bug/server#readme",
   "dependencies": {
-    "cors": "^2.8.5"
+    "bcrypt-nodejs": "0.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.9",
+    "mysql": "^2.17.1",
+    "passport-local": "^1.0.0"
   }
 }
