--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
 }
